fix: update form width for better responsiveness on small screens

--- a/client/laundroclean/src/components/ui/Forms/AuthForm.module.css
+++ b/client/laundroclean/src/components/ui/Forms/AuthForm.module.css
@@ -87,6 +87,6 @@
 
 @media (max-width: 500px) {
   .form {
-    width: 300px;
+    width: 350px;
   }
 }
